extensions/client_cpp/hl2ss_ulm.h

struct sm_mesh
{
    uint32_t status;
    hl2ss::vector_3 vertex_position_scale;
    uint64_t bounds_size;
    uint64_t vertex_positions_size;
    uint64_t triangle_indices_size;
    uint64_t vertex_normals_size;
    hl2ss::matrix_4x4 pose;
    void* bounds_data;
    void* vertex_positions_data;
    void* triangle_indices_data;
    void* vertex_normals_data;
    void* _reserved;
};
struct su_mesh
{
    uint64_t vertex_positions_size;
    uint64_t triangle_indices_size;
    void* vertex_positions_data;
    void* triangle_indices_data;
};
struct su_item
{
    hl2ss::guid id;
    int32_t kind;
    uint32_t _reserved_0;
    hl2ss::quaternion orientation;
    hl2ss::vector_3 position;
    int32_t alignment;
    hl2ss::vector_2 extents;
    uint64_t meshes_count;
    uint64_t collider_meshes_count;
    hl2ss::matrix_4x4 location;
    void* meshes_data;
    void* collider_meshes_data;
    void* _reserved_1;
};
struct su_result
{
    uint32_t status;
    uint32_t _reserved;
    uint64_t items_count;
    hl2ss::matrix_4x4 extrinsics;
    hl2ss::matrix_4x4 pose;
    void* items_data;
};
struct su_task 
{
    bool enable_quads;
    bool enable_meshes;
    bool enable_only_observed;
    bool enable_world_mesh;
    uint32_t mesh_lod;
    float query_radius;
    uint8_t create_mode;
    uint8_t kind_flags;
    bool get_orientation;
    bool get_position;
    bool get_location_matrix;
    bool get_quad;
    bool get_meshes;
    bool get_collider_meshes;
    uint32_t _reserved_0;
    uint64_t guid_list_size;
    hl2ss::guid const* guid_list_data;
    void* _reserved_1;
};
struct gmq_message
{
    uint32_t command;
    uint32_t size;
    uint8_t* data;
    void* _reserved;
};
//------------------------------------------------------------------------------
// Remote Configuration
//------------------------------------------------------------------------------

HL2SS_CLIENT_IMPORT
int32_t HL2SS_CALL rc_ee_get_application_version(void* ipc, hl2ss::version& version);
HL2SS_CLIENT_IMPORT
int32_t HL2SS_CALL rc_ts_get_utc_offset(void* ipc, uint64_t& offset);
HL2SS_CLIENT_IMPORT
int32_t HL2SS_CALL rc_hs_set_marker_state(void* ipc, uint32_t state);
HL2SS_CLIENT_IMPORT
int32_t HL2SS_CALL rc_pv_get_subsystem_status(void* ipc, uint32_t& status);
HL2SS_CLIENT_IMPORT
int32_t HL2SS_CALL rc_pv_wait_for_subsystem(void* ipc, uint32_t status);
HL2SS_CLIENT_IMPORT
int32_t HL2SS_CALL rc_pv_set_focus(void* ipc, uint32_t mode, uint32_t range, uint32_t distance, uint32_t value, uint32_t driver_fallback);
HL2SS_CLIENT_IMPORT
int32_t HL2SS_CALL rc_pv_set_video_temporal_denoising(void* ipc, uint32_t mode);
HL2SS_CLIENT_IMPORT
int32_t HL2SS_CALL rc_pv_set_white_balance_preset(void* ipc, uint32_t preset);
HL2SS_CLIENT_IMPORT
int32_t HL2SS_CALL rc_pv_set_white_balance_value(void* ipc, uint32_t value);
HL2SS_CLIENT_IMPORT
int32_t HL2SS_CALL rc_pv_set_exposure(void* ipc, uint32_t mode, uint32_t value);
HL2SS_CLIENT_IMPORT
int32_t HL2SS_CALL rc_pv_set_exposure_priority_video(void* ipc, uint32_t enabled);
HL2SS_CLIENT_IMPORT
int32_t HL2SS_CALL rc_pv_set_iso_speed(void* ipc, uint32_t mode, uint32_t value);
HL2SS_CLIENT_IMPORT
int32_t HL2SS_CALL rc_pv_set_backlight_compensation(void* ipc, uint32_t state);
HL2SS_CLIENT_IMPORT
int32_t HL2SS_CALL rc_pv_set_scene_mode(void* ipc, uint32_t mode);
HL2SS_CLIENT_IMPORT
int32_t HL2SS_CALL rc_ee_set_flat_mode(void* ipc, uint32_t mode);
HL2SS_CLIENT_IMPORT
int32_t HL2SS_CALL rc_rm_set_eye_selection(void* ipc, uint32_t enable);
HL2SS_CLIENT_IMPORT
int32_t HL2SS_CALL rc_pv_set_desired_optimization(void* ipc, uint32_t mode);
HL2SS_CLIENT_IMPORT
int32_t HL2SS_CALL rc_pv_set_primary_use(void* ipc, uint32_t mode);
HL2SS_CLIENT_IMPORT
int32_t HL2SS_CALL rc_pv_set_optical_image_stabilization(void* ipc, uint32_t mode);
HL2SS_CLIENT_IMPORT
int32_t HL2SS_CALL rc_pv_set_hdr_video(void* ipc, uint32_t mode);
HL2SS_CLIENT_IMPORT
int32_t HL2SS_CALL rc_pv_set_regions_of_interest(void* ipc, uint32_t clear, uint32_t set, uint32_t auto_exposure, uint32_t auto_focus, uint32_t bounds_normalized, uint32_t type, uint32_t weight, float x, float y, float w, float h);
HL2SS_CLIENT_IMPORT
int32_t HL2SS_CALL rc_ee_set_interface_priority(void* ipc, uint16_t port, int32_t priority);
HL2SS_CLIENT_IMPORT
int32_t HL2SS_CALL rc_ee_set_quiet_mode(void* ipc, uint32_t mode);
HL2SS_CLIENT_IMPORT
void* HL2SS_CALL rc_rm_map_camera_points(void* ipc, uint16_t port, uint32_t operation, hl2ss::vector_2 const* points, uint32_t count, hl2ss::vector_2*& out);
HL2SS_CLIENT_IMPORT
void* HL2SS_CALL rc_rm_get_rignode_world_poses(void* ipc, uint64_t const* timestamps, uint32_t count, hl2ss::matrix_4x4*& out);
HL2SS_CLIENT_IMPORT
int32_t HL2SS_CALL rc_ts_get_current_time(void* ipc, uint32_t source, uint64_t& timestamp);
HL2SS_CLIENT_IMPORT
int32_t HL2SS_CALL rc_si_set_sampling_delay(void* ipc, int64_t delay);
//------------------------------------------------------------------------------
// Spatial Mapping
//------------------------------------------------------------------------------

HL2SS_CLIENT_IMPORT
int32_t HL2SS_CALL sm_set_volumes(void* ipc, uint32_t count, uint8_t const* data, uint64_t size);
HL2SS_CLIENT_IMPORT
void* HL2SS_CALL sm_get_observed_surfaces(void* ipc, uint64_t& size, hl2ss::sm_surface_info*& data);
HL2SS_CLIENT_IMPORT
void* HL2SS_CALL sm_get_meshes(void* ipc, uint32_t count, uint8_t const* data, uint64_t size, void*& meshes_data);
HL2SS_CLIENT_IMPORT
int32_t HL2SS_CALL sm_unpack_mesh(void* meshes_data, uint64_t index, hl2ss::ulm::sm_mesh& mesh);
//------------------------------------------------------------------------------
// Scene Understanding
//------------------------------------------------------------------------------

HL2SS_CLIENT_IMPORT
void* HL2SS_CALL su_query(void* ipc, hl2ss::ulm::su_task const& task, hl2ss::ulm::su_result& header);
HL2SS_CLIENT_IMPORT
int32_t HL2SS_CALL su_unpack_item(void* items_data, uint64_t index, hl2ss::ulm::su_item& item);
HL2SS_CLIENT_IMPORT
int32_t HL2SS_CALL su_unpack_item_mesh(void* meshes_data, uint64_t index, hl2ss::ulm::su_mesh& mesh);
//------------------------------------------------------------------------------
// Voice Input
//------------------------------------------------------------------------------

HL2SS_CLIENT_IMPORT
int32_t HL2SS_CALL vi_start(void* ipc, char const* utf8_array);
HL2SS_CLIENT_IMPORT
void* HL2SS_CALL vi_pop(void* ipc, uint64_t& size, hl2ss::vi_result*& data);
HL2SS_CLIENT_IMPORT
int32_t HL2SS_CALL vi_stop(void* ipc);
//------------------------------------------------------------------------------
// Unity Message Queue
//------------------------------------------------------------------------------

HL2SS_CLIENT_IMPORT
int32_t HL2SS_CALL umq_push(void* ipc, uint8_t const* data, uint32_t size);
HL2SS_CLIENT_IMPORT
int32_t HL2SS_CALL umq_pull(void* ipc, uint32_t* data, uint32_t count);
//-----------------------------------------------------------------------------
// Guest Message Queue
//-----------------------------------------------------------------------------

HL2SS_CLIENT_IMPORT
void* HL2SS_CALL gmq_pull(void *ipc, hl2ss::ulm::gmq_message& result);
HL2SS_CLIENT_IMPORT
int32_t HL2SS_CALL gmq_push(void* ipc, uint32_t const* response, uint32_t count);