extensions/client_unity/Assets/Scripts/hl2ss/hl2ss_ulm.cs


        //------------------------------------------------------------------------------
        // Remote Configuration
        //------------------------------------------------------------------------------

        [DllImport("hl2ss_ulm")]
        public static extern int rc_ee_get_application_version(IntPtr ipc, hl2ss.version version);

        [DllImport("hl2ss_ulm")]
        public static extern int rc_ts_get_utc_offset(IntPtr ipc, out ulong offset);

        [DllImport("hl2ss_ulm")]
        public static extern int rc_hs_set_marker_state(IntPtr ipc, uint state);

        [DllImport("hl2ss_ulm")]
        public static extern int rc_pv_get_subsystem_status(IntPtr ipc, out uint status);

        [DllImport("hl2ss_ulm")]
        public static extern int rc_pv_wait_for_subsystem(IntPtr ipc, uint status);

        [DllImport("hl2ss_ulm")]
        public static extern int rc_pv_set_focus(IntPtr ipc, uint mode, uint range, uint distance, uint value, uint driver_fallback);

        [DllImport("hl2ss_ulm")]
        public static extern int rc_pv_set_video_temporal_denoising(IntPtr ipc, uint mode);

        [DllImport("hl2ss_ulm")]
        public static extern int rc_pv_set_white_balance_preset(IntPtr ipc, uint preset);

        [DllImport("hl2ss_ulm")]
        public static extern int rc_pv_set_white_balance_value(IntPtr ipc, uint value);

        [DllImport("hl2ss_ulm")]
        public static extern int rc_pv_set_exposure(IntPtr ipc, uint mode, uint value);

        [DllImport("hl2ss_ulm")]
        public static extern int rc_pv_set_exposure_priority_video(IntPtr ipc, uint enabled);

        [DllImport("hl2ss_ulm")]
        public static extern int rc_pv_set_iso_speed(IntPtr ipc, uint mode, uint value);

        [DllImport("hl2ss_ulm")]
        public static extern int rc_pv_set_backlight_compensation(IntPtr ipc, uint state);

        [DllImport("hl2ss_ulm")]
        public static extern int rc_pv_set_scene_mode(IntPtr ipc, uint mode);

        [DllImport("hl2ss_ulm")]
        public static extern int rc_ee_set_flat_mode(IntPtr ipc, uint mode);

        [DllImport("hl2ss_ulm")]
        public static extern int rc_rm_set_eye_selection(IntPtr ipc, uint enable);

        [DllImport("hl2ss_ulm")]
        public static extern int rc_pv_set_desired_optimization(IntPtr ipc, uint mode);

        [DllImport("hl2ss_ulm")]
        public static extern int rc_pv_set_primary_use(IntPtr ipc, uint mode);

        [DllImport("hl2ss_ulm")]
        public static extern int rc_pv_set_optical_image_stabilization(IntPtr ipc, uint mode);

        [DllImport("hl2ss_ulm")]
        public static extern int rc_pv_set_hdr_video(IntPtr ipc, uint mode);

        [DllImport("hl2ss_ulm")]
        public static extern int rc_pv_set_regions_of_interest(IntPtr ipc, uint clear, uint set, uint auto_exposure, uint auto_focus, uint bounds_normalized, uint type, uint weight, float x, float y, float w, float h);

        [DllImport("hl2ss_ulm")]
        public static extern int rc_ee_set_interface_priority(IntPtr ipc, ushort port, int priority);

        [DllImport("hl2ss_ulm")]
        public static extern int rc_ee_set_quiet_mode(IntPtr ipc, uint mode);

        [DllImport("hl2ss_ulm")]
        public static extern IntPtr rc_rm_map_camera_points(IntPtr ipc, ushort port, uint operation, float[] points, uint count, out IntPtr result);

        [DllImport("hl2ss_ulm")]
        public static extern IntPtr rc_rm_get_rignode_world_poses(IntPtr ipc, ulong[] timestamps, uint count, out IntPtr poses);

        [DllImport("hl2ss_ulm")]
        public static extern int rc_ts_get_current_time(IntPtr ipc, uint source, out ulong timestamp);

        [DllImport("hl2ss_ulm")]
        public static extern int rc_si_set_sampling_delay(IntPtr ipc, long delay);

        [DllImport("hl2ss_ulm")]
        public static extern int rc_ee_set_encoder_buffering(IntPtr ipc, uint enable);

        [DllImport("hl2ss_ulm")]
        public static extern int rc_ee_set_reader_buffering(IntPtr ipc, uint enable);

        [DllImport("hl2ss_ulm")]
        public static extern int rc_rm_set_loop_control(IntPtr ipc, ushort port, uint enable);

        //------------------------------------------------------------------------------
        // Spatial Mapping
        //------------------------------------------------------------------------------

        [DllImport("hl2ss_ulm")]
        public static extern int sm_set_volumes(IntPtr ipc, uint count, byte[] data, ulong size);

        [DllImport("hl2ss_ulm")]
        public static extern IntPtr sm_get_observed_surfaces(IntPtr ipc, out ulong size, out IntPtr data);

        [DllImport("hl2ss_ulm")]
        public static extern IntPtr sm_get_meshes(IntPtr ipc, uint count, byte[] data, ulong size, out IntPtr meshes_data);

        [DllImport("hl2ss_ulm")]
        public static extern int sm_unpack_mesh(IntPtr meshes_data, ulong index, hl2ss.ulm.sm_mesh mesh);

        //------------------------------------------------------------------------------
        // Scene Understanding
        //------------------------------------------------------------------------------

        [DllImport("hl2ss_ulm")]
        public static extern IntPtr su_query(IntPtr ipc, hl2ss.ulm.su_task task, hl2ss.ulm.su_result header);

        [DllImport("hl2ss_ulm")]
        public static extern int su_unpack_item(IntPtr items_data, ulong index, hl2ss.ulm.su_item item);

        [DllImport("hl2ss_ulm")]
        public static extern int su_unpack_item_mesh(IntPtr meshes_data, ulong index, hl2ss.ulm.su_mesh mesh);

        //------------------------------------------------------------------------------
        // Voice Input
        //------------------------------------------------------------------------------

        [DllImport("hl2ss_ulm")]
        public static extern int vi_start(IntPtr ipc, byte[] utf8_array);

        [DllImport("hl2ss_ulm")]
        public static extern IntPtr vi_pop(IntPtr ipc, out ulong size, out IntPtr data);

        [DllImport("hl2ss_ulm")]
        public static extern int vi_stop(IntPtr ipc);

        //------------------------------------------------------------------------------
        // Unity Message Queue
        //------------------------------------------------------------------------------

        [DllImport("hl2ss_ulm")]
        public static extern int umq_push(IntPtr ipc, byte[] data, uint size);

        [DllImport("hl2ss_ulm")]
        public static extern int umq_pull(IntPtr ipc, uint[] data, uint count);

        //-----------------------------------------------------------------------------
        // Guest Message Queue
        //-----------------------------------------------------------------------------

        [DllImport("hl2ss_ulm")]
        public static extern IntPtr gmq_pull(IntPtr ipc, gmq_message result);

        [DllImport("hl2ss_ulm")]
        public static extern int gmq_push(IntPtr ipc, uint[] response, uint count);
    }
}
